PP-14728 - Replaced .get(0) to .getFirst()